OM-48 Fix rendering quick search results behind carousel menu

--- a/OlympusMovie-Frontend/src/components/Nav/Nav.module.css
+++ b/OlympusMovie-Frontend/src/components/Nav/Nav.module.css
@@ -96,11 +96,14 @@
 }
 
 .dataResult {
+    position: relative;
+    background-color: white;
     margin-top: 5px;
     width: 300px;
     height: 200px;
     overflow: hidden;
     overflow-y: auto;
+    z-index: 100;
 }
 
 .dataResult::-webkit-scrollbar {
